// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creators Able to delete existing categoryRewards 1`] = `
Array [
  Object {
    "id": 1,
    "type": "DELETE_CATEGORY_REWARD",
  },
]
`;

exports[`Action Creators Able to receive new categoryRewards 1`] = `
Array [
  Object {
    "categoryRewards": Object {
      "categoryId": 100,
      "id": 100,
      "rewardId": 100,
    },
    "type": "RECEIVE_CATEGORY_REWARD",
  },
]
`;

exports[`Action Creators Able to update existing categoryRewards 1`] = `
Array [
  Object {
    "categoryRewards": Object {
      "categoryId": 3,
      "id": 1,
      "rewardId": 3,
    },
    "type": "UPDATE_CATEGORY_REWARD",
  },
]
`;
